убираю некоторые недочеты

--- a/ultra-constructive-math - Kantor.ipynb
+++ b/ultra-constructive-math - Kantor.ipynb
@@ -188,6 +188,7 @@
     "class Sum(BinaryOpOnRealNumber):\n",
     "    def get_value_with_precision(self, precision):\n",
     "        assert precision > 0\n",
+    "        precision = Decimal(precision)\n",
     "        left_value = self._left.get_value_with_precision(precision * Decimal(0.5))\n",
     "        right_value = self._right.get_value_with_precision(precision * Decimal(0.5))\n",
     "        return (left_value + right_value).get_value_with_precision(precision)\n",
@@ -196,6 +197,7 @@
     "class Subtract(BinaryOpOnRealNumber):\n",
     "    def get_value_with_precision(self, precision):\n",
     "        assert precision > 0\n",
+    "        precision = Decimal(precision)\n",
     "        left_value = self._left.get_value_with_precision(precision * Decimal(0.5))\n",
     "        right_value = self._right.get_value_with_precision(precision * Decimal(0.5))\n",
     "        return (left_value - right_value).get_value_with_precision(precision)\n",
@@ -299,7 +301,10 @@
     "        \n",
     "    def __next__(self):\n",
     "        return self._generator_state.__next__()\n",
-    "    next = __next__\n"
+    "    next = __next__\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return 'InfiniteSequence<generator={}>'.format(self._generator)"
    ]
   },
   {
@@ -320,7 +325,10 @@
     "    def __init__(self, generator, K):\n",
     "        assert K > 1\n",
     "        self.K = K\n",
-    "        super(ConvergingIntervalSequence, self).__init__(generator)"
+    "        super(ConvergingIntervalSequence, self).__init__(generator)\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return 'ConvergingIntervalSequence<generator={}, K={}>'.format(self._generator, self.K)"
    ]
   },
   {
@@ -332,6 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ConvergingIntervalSequence<generator=<function test_generator at 0x7fb8bc390700>, K=2>\n",
       "(0, 0.5)\n",
       "(0, 0.25)\n",
       "(0, 0.125)\n",
@@ -349,6 +358,7 @@
     "        right_border = right_border * 0.5\n",
     "\n",
     "sequence = ConvergingIntervalSequence(test_generator, 2)\n",
+    "print(sequence)\n",
     "for i, interval in enumerate(sequence):\n",
     "    print((interval[0].get_value_with_precision(1e-10), interval[1].get_value_with_precision(1e-10)))\n",
     "    if i >= 5:\n",
@@ -380,7 +390,10 @@
     "        while (interval[1] - interval[0]).get_value_with_precision(precision) > precision:\n",
     "            interval = self.sequence.next()\n",
     "            \n",
-    "        return ((interval[0] + interval[1]) * 0.5).get_value_with_precision(precision)"
+    "        return ((interval[0] + interval[1]) * 0.5).get_value_with_precision(precision)\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return 'ConvergingIntervalSequenceLimit<{}>'.format(self.sequence)"
    ]
   },
   {
@@ -392,6 +405,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ConvergingIntervalSequenceLimit<ConvergingIntervalSequence<generator=<function test_generator at 0x7fb8bd67b550>, K=2>>\n",
       "precision: 0.1\tvalue: 0.031\n",
       "precision: 0.001\tvalue: 0.0004883\n",
       "precision: 1e-07\tvalue: 2.98023224E-8\n",
@@ -407,6 +421,7 @@
     "        right_border = right_border * 0.5\n",
     "\n",
     "number = ConvergingIntervalSequenceLimit(ConvergingIntervalSequence(test_generator, 2))\n",
+    "print(number)\n",
     "for precision in [0.1, 0.001, 0.0000001, 0.000000000000000000000000000000000000000000000000000000000000000000001]:\n",
     "    print(\"precision: {}\\tvalue: {}\".format(precision, number.get_value_with_precision(precision)))"
    ]
@@ -512,7 +527,10 @@
     "            # значит function(right_quarter) > 0, а function(left_quarter) < 0\n",
     "            # делаем их новыми границами\n",
     "            else:\n",
-    "                left, right = left_quarter, right_quarter\n"
+    "                left, right = left_quarter, right_quarter\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return 'EquationRootSequence<function={}, interval=({},{})>'.format(self.function, self.left, self.right)"
    ]
   },
   {
@@ -531,6 +549,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "EquationRootSequence<function=<function <lambda> at 0x7fb8bc3aa280>, interval=(1,2)>\n",
       "(1, 2)\n",
       "(1.5, 2)\n",
       "(1.5, 1.75)\n",
@@ -547,6 +566,7 @@
    ],
    "source": [
     "sequence = EquationRootSequence(lambda x: x*x - 3, 1, 2)\n",
+    "print(sequence)\n",
     "print(sequence.first())\n",
     "for _ in range(10):\n",
     "    print(sequence.next())"
@@ -782,6 +802,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ConvergingIntervalSequenceLimit<ConvergingIntervalSequence<generator=<function build_converging_intervals_for_number_sequence.<locals>._generator at 0x7fb8bc3aac10>, K=8>>\n",
       "precision: 0.1\tvalue=0.15\n",
       "precision: 0.001\tvalue=0.1429\n",
       "precision: 1e-07\tvalue=0.142857164\n",
@@ -799,9 +820,37 @@
     "number_sequence = InfiniteSequence(inverted_square_root_generator)\n",
     "interval_sequence = build_converging_intervals_for_number_sequence(number_sequence)\n",
     "number = ConvergingIntervalSequenceLimit(interval_sequence)\n",
+    "print(number)\n",
     "for precision in [0.1, 0.001, 0.0000001, 0.000000000000001, 1e-49, 1e-200]:\n",
     "    value = number.get_value_with_precision(precision)\n",
     "    print(\"precision: {}\\tvalue={}\".format(precision, value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "И, как и с любым нормальным числом, с ним можно делать всякие вычисления:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subtract<Multiply<Divide<Sum<ConvergingIntervalSequenceLimit<ConvergingIntervalSequence<generator=<function build_converging_intervals_for_number_sequence.<locals>._generator at 0x7fb8bc3aac10>, K=8>>, 1>, 2>, 3>, 4>\n",
+      "-2.285714285714285714285714285714285714285714237669767\n"
+     ]
+    }
+   ],
+   "source": [
+    "number2 = ((((number + 1) / 2) * 3) - 4)\n",
+    "print(number2)\n",
+    "print(number2.get_value_with_precision(1e-49))"
    ]
   },
   {
