--- a/ultra-constructive-math - Kantor.ipynb
+++ b/ultra-constructive-math - Kantor.ipynb
@@ -105,7 +105,13 @@
     "    \n",
     "    def __int__(self):\n",
     "        return int(self._value)\n",
-    "    "
+    "    \n",
+    "    def __pow__(self, power):\n",
+    "        assert isinstance(power, int)\n",
+    "        assert power >= 0\n",
+    "        with localcontext() as ctx:\n",
+    "            ctx.prec = len(self._value.as_tuple().digits) * power + 2\n",
+    "            return Decimal(self._value ** power)"
    ]
   },
   {
@@ -343,10 +349,14 @@
     "        \n",
     "    def __next__(self):\n",
     "        return self._generator_state.__next__()\n",
-    "    next = __next__\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        return 'InfiniteSequence<generator={}>'.format(self._params['generator'])"
+    "    \n",
+    "    def get_ith_element(self, i):\n",
+    "        el = self.first()\n",
+    "        for _ in range(i):\n",
+    "            el = self.next()\n",
+    "        return el\n",
+    "    \n",
+    "    next = __next__"
    ]
   },
   {
@@ -426,7 +436,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ConvergingIntervalSequence<generator=<function test_generator at 0x7f3f8d5a6b80>, K=2>\n",
+      "ConvergingIntervalSequence<generator=<function test_generator at 0x7f6f9045a040>, K=2>\n",
       "(0, 0.5)\n",
       "(0, 0.25)\n",
       "(0, 0.125)\n",
@@ -492,7 +502,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ConvergingIntervalSequenceLimit<ConvergingIntervalSequence<generator=<function test_generator at 0x7f3f8d5bb0d0>, K=2>>\n",
+      "ConvergingIntervalSequenceLimit<ConvergingIntervalSequence<generator=<function test_generator at 0x7f6f9045a9d0>, K=2>>\n",
       "precision: 0.1\tvalue: 0.031\n",
       "precision: 0.001\tvalue: 0.0004883\n",
       "precision: 1e-07\tvalue: 2.98023224E-8\n",
@@ -607,7 +617,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EquationRootSequence<function=<function <lambda> at 0x7f3f8d550160>, interval=(1, 2)>\n",
+      "EquationRootSequence<function=<function <lambda> at 0x7f6f9043fd30>, interval=(1, 2)>\n",
       "(1, 2)\n",
       "(1.5, 2)\n",
       "(1.625, 1.875)\n",
@@ -875,7 +885,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KantorNumber<map<NaturalNumberSequence, func=<function <lambda> at 0x7f3f8d4da040>>>\n",
+      "KantorNumber<map<NaturalNumberSequence, func=<function <lambda> at 0x7f6f9038e040>>>\n",
       "precision: 0.1\tvalue=0.15\n",
       "precision: 0.001\tvalue=0.1429\n",
       "precision: 1e-07\tvalue=0.142857164\n",
@@ -910,7 +920,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subtract<Multiply<Divide<Sum<KantorNumber<map<NaturalNumberSequence, func=<function <lambda> at 0x7f3f8d4da040>>>, 1>, 2>, 3>, 4>\n",
+      "Subtract<Multiply<Divide<Sum<KantorNumber<map<NaturalNumberSequence, func=<function <lambda> at 0x7f6f9038e040>>>, 1>, 2>, 3>, 4>\n",
       "-2.285714285714285714285714285714285714285714237669767\n"
      ]
     }
@@ -936,7 +946,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KantorNumber<ConcatSequences<FiniteSequence<[KantorNumber<map<NaturalNumberSequence, func=<function <lambda> at 0x7f3f8d4da040>>>]>, map<NaturalNumberSequence, func=<function <lambda> at 0x7f3f8d4dac10>>>>\n",
+      "KantorNumber<ConcatSequences<FiniteSequence<[KantorNumber<map<NaturalNumberSequence, func=<function <lambda> at 0x7f6f9038e040>>>]>, map<NaturalNumberSequence, func=<function <lambda> at 0x7f6f90457700>>>>\n",
       "precision: 0.1\tvalue=0.77\n",
       "precision: 0.001\tvalue=0.7789\n",
       "precision: 1e-07\tvalue=0.779017836\n",
@@ -1002,9 +1012,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KantorNumber<map<NaturalNumberSequence, func=<function get_ith_element at 0x7f3f8d4e49d0>>>\n",
-      "CPU times: user 90 µs, sys: 0 ns, total: 90 µs\n",
-      "Wall time: 92.5 µs\n"
+      "KantorNumber<map<NaturalNumberSequence, func=<function get_ith_element at 0x7f6f9038e700>>>\n",
+      "CPU times: user 277 µs, sys: 0 ns, total: 277 µs\n",
+      "Wall time: 196 µs\n"
      ]
     }
    ],
@@ -1041,6 +1051,60 @@
    ],
    "source": [
     "print(kantor_number.get_value_with_precision(0.00001))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Можно посчитать разность между полученным числом и произвольным числом из последовательности. Она должна быть больше чем (1/8)^(i+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40-ый элемент: Divide<1, SquareRoot<41>>. ожидаемая разность: >9.404E-38, настоящая разность: 0.013317 +- 9.404E-40\n",
+      "41-ый элемент: Divide<1, SquareRoot<42>>. ожидаемая разность: >1.1755E-38, настоящая разность: 0.011446 +- 1.1755E-40\n",
+      "42-ый элемент: Divide<1, SquareRoot<43>>. ожидаемая разность: >1.4694E-39, настоящая разность: 0.0096414 +- 1.4694E-41\n",
+      "43-ый элемент: Divide<1, SquareRoot<44>>. ожидаемая разность: >1.8367E-40, настоящая разность: 0.0078985 +- 1.8367E-42\n",
+      "44-ый элемент: Divide<1, SquareRoot<45>>. ожидаемая разность: >2.2959E-41, настоящая разность: 0.0062141 +- 2.2959E-43\n",
+      "45-ый элемент: Divide<1, SquareRoot<46>>. ожидаемая разность: >2.8699E-42, настоящая разность: 0.0045848 +- 2.8699E-44\n",
+      "46-ый элемент: Divide<1, SquareRoot<47>>. ожидаемая разность: >3.5873E-43, настоящая разность: 0.0030078 +- 3.5873E-45\n",
+      "47-ый элемент: Divide<1, SquareRoot<48>>. ожидаемая разность: >4.4842E-44, настоящая разность: 0.0014804 +- 4.4842E-46\n",
+      "48-ый элемент: Divide<1, SquareRoot<49>>. ожидаемая разность: >5.6052E-45, настоящая разность: 3.2026E-44 +- 5.6052E-47\n",
+      "49-ый элемент: Divide<1, SquareRoot<5E+1>>. ожидаемая разность: >7.0065E-46, настоящая разность: 0.0014358 +- 7.0065E-48\n",
+      "50-ый элемент: Divide<1, SquareRoot<51>>. ожидаемая разность: >8.7581E-47, настоящая разность: 0.0028291 +- 8.7581E-49\n",
+      "51-ый элемент: Divide<1, SquareRoot<52>>. ожидаемая разность: >1.0948E-47, настоящая разность: 0.0041821 +- 1.0948E-49\n",
+      "52-ый элемент: Divide<1, SquareRoot<53>>. ожидаемая разность: >1.3685E-48, настоящая разность: 0.0054966 +- 1.3685E-50\n",
+      "53-ый элемент: Divide<1, SquareRoot<54>>. ожидаемая разность: >1.7106E-49, настоящая разность: 0.0067744 +- 1.7106E-51\n",
+      "54-ый элемент: Divide<1, SquareRoot<55>>. ожидаемая разность: >2.1382E-50, настоящая разность: 0.0080172 +- 2.1382E-52\n",
+      "55-ый элемент: Divide<1, SquareRoot<56>>. ожидаемая разность: >2.6728E-51, настоящая разность: 0.0092265 +- 2.6728E-53\n",
+      "56-ый элемент: Divide<1, SquareRoot<57>>. ожидаемая разность: >3.341E-52, настоящая разность: 0.010404 +- 3.341E-54\n",
+      "57-ый элемент: Divide<1, SquareRoot<58>>. ожидаемая разность: >4.1762E-53, настоящая разность: 0.011551 +- 4.1762E-55\n",
+      "58-ый элемент: Divide<1, SquareRoot<59>>. ожидаемая разность: >5.2202E-54, настоящая разность: 0.012668 +- 5.2202E-56\n",
+      "59-ый элемент: Divide<1, SquareRoot<6E+1>>. ожидаемая разность: >6.5253E-55, настоящая разность: 0.013758 +- 6.5253E-57\n"
+     ]
+    }
+   ],
+   "source": [
+    "number_sequence = MappedSequence(NaturalNumberSequence(), lambda i: RealNumberExact(1) / SquareRoot(i))\n",
+    "kantor_number = KantorNumber(number_sequence)\n",
+    "for i in range(40, 60):\n",
+    "    expected_diff = Decimal(0.125) ** (i + 1)\n",
+    "    precision = expected_diff * 0.01\n",
+    "    print('{}-ый элемент: {}. ожидаемая разность: >{}, настоящая разность: {} +- {}'.format(\n",
+    "        i,\n",
+    "        number_sequence.get_ith_element(i),\n",
+    "        expected_diff.get_value_with_digits(5),\n",
+    "        abs((kantor_number - number_sequence.get_ith_element(i)).get_value_with_precision(precision).get_value_with_digits(5)),\n",
+    "        precision.get_value_with_digits(5),\n",
+    "    ))"
    ]
   },
   {
