возможность задать последовательность не используя ссылки на функции

--- a/ultra-constructive-math - Kantor.ipynb
+++ b/ultra-constructive-math - Kantor.ipynb
@@ -9,7 +9,8 @@
     "import math\n",
     "import itertools\n",
     "from decimal import Decimal as _Decimal, localcontext\n",
-    "from functools import total_ordering "
+    "from functools import total_ordering, lru_cache\n",
+    "from copy import deepcopy"
    ]
   },
   {
@@ -105,6 +106,9 @@
     "    \n",
     "    def __int__(self):\n",
     "        return int(self._value)\n",
+    "\n",
+    "    def __hash__(self):\n",
+    "        return hash(self._value)    \n",
     "    \n",
     "    def __pow__(self, power):\n",
     "        assert isinstance(power, int)\n",
@@ -210,6 +214,9 @@
     "        other = other if isinstance(other, RealNumberExact) else RealNumberExact(other)        \n",
     "        return self._params['value'] == other._params['value'] \n",
     "\n",
+    "    def __hash__(self):\n",
+    "        return hash(self._params['value'])\n",
+    "    \n",
     "    def __repr__(self):\n",
     "        return '{}'.format(self._params['value'])\n",
     "\n",
@@ -352,6 +359,8 @@
     "    \n",
     "    def get_ith_element(self, i):\n",
     "        el = self.first()\n",
+    "        if isinstance(i, RealNumberExact):\n",
+    "            i = int(i._params['value'])\n",
     "        for _ in range(i):\n",
     "            el = self.next()\n",
     "        return el\n",
@@ -436,7 +445,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ConvergingIntervalSequence<generator=<function test_generator at 0x7f6f9045a040>, K=2>\n",
+      "ConvergingIntervalSequence<generator=<function test_generator at 0x7f3b3c1f1e50>, K=2>\n",
       "(0, 0.5)\n",
       "(0, 0.25)\n",
       "(0, 0.125)\n",
@@ -502,7 +511,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ConvergingIntervalSequenceLimit<ConvergingIntervalSequence<generator=<function test_generator at 0x7f6f9045a9d0>, K=2>>\n",
+      "ConvergingIntervalSequenceLimit<ConvergingIntervalSequence<generator=<function test_generator at 0x7f3b3c1fd8b0>, K=2>>\n",
       "precision: 0.1\tvalue: 0.031\n",
       "precision: 0.001\tvalue: 0.0004883\n",
       "precision: 1e-07\tvalue: 2.98023224E-8\n",
@@ -617,7 +626,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EquationRootSequence<function=<function <lambda> at 0x7f6f9043fd30>, interval=(1, 2)>\n",
+      "EquationRootSequence<function=<function <lambda> at 0x7f3b3c199550>, interval=(1, 2)>\n",
       "(1, 2)\n",
       "(1.5, 2)\n",
       "(1.625, 1.875)\n",
@@ -690,9 +699,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class Variable(RealNumber):\n",
+    "    def __init__(self, name):\n",
+    "        super(RealNumber, self).__init__()\n",
+    "        self._params['name'] = name\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return '{}'.format(self._params['name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class SquareRoot(RealNumberFunctionOfRealNumbers):\n",
     "    def __init__(self, value):\n",
-    "        assert value > 0\n",
+    "        assert isinstance(value, Variable) or value > 0\n",
     "        value = value if isinstance(value, RealNumber) else RealNumberExact(value)\n",
     "        super(SquareRoot, self).__init__(value)\n",
     "        \n",
@@ -707,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,13 +809,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Transform(Node):\n",
+    "    def __init__(self, var, result):\n",
+    "        super(Transform, self).__init__(var, result)\n",
+    "        assert isinstance(var, Variable)\n",
+    "        assert isinstance(self(RealNumberExact(1)).get_value_with_precision(1), Decimal)\n",
+    "       \n",
+    "    def __repr__(self):\n",
+    "        return 'Transform<{} -> {}>'.format(self._children[0], self._children[1])\n",
+    "    \n",
+    "    def _apply_var(self, var, value, node):\n",
+    "        if isinstance(node, Variable) and node._params['name'] == var._params['name']:\n",
+    "            return value\n",
+    "        \n",
+    "        node._children = [self._apply_var(var, value, child) for child in node._children]\n",
+    "        return node\n",
+    "    \n",
+    "    def __call__(self, value):\n",
+    "        result =  self._apply_var(self._children[0], value, deepcopy(self._children[1]))\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "map<NaturalNumberSequence, func=Transform<X -> Divide<1, SquareRoot<X>>>>\n",
       "Divide<1, SquareRoot<1>>\n",
       "Divide<1, SquareRoot<2>> ~ 0.7071067811865475188016887242096981229060361862464483\n",
       "Divide<1, SquareRoot<3>> ~ 0.5773502691896257956849642276705832613965555987815\n",
@@ -802,7 +854,8 @@
     }
    ],
    "source": [
-    "sequence = MappedSequence(NaturalNumberSequence(), lambda i: RealNumberExact(1) / SquareRoot(i))\n",
+    "sequence = MappedSequence(NaturalNumberSequence(), Transform(Variable('X'), RealNumberExact(1) / SquareRoot(Variable('X'))))\n",
+    "print(sequence)\n",
     "print(sequence.first())\n",
     "for _ in range(5):\n",
     "    number = sequence.next()\n",
@@ -822,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,14 +931,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KantorNumber<map<NaturalNumberSequence, func=<function <lambda> at 0x7f6f9038e040>>>\n",
+      "KantorNumber<map<NaturalNumberSequence, func=Transform<X -> Divide<1, SquareRoot<X>>>>>\n",
       "precision: 0.1\tvalue=0.15\n",
       "precision: 0.001\tvalue=0.1429\n",
       "precision: 1e-07\tvalue=0.142857164\n",
@@ -896,7 +949,13 @@
     }
    ],
    "source": [
-    "number_sequence = MappedSequence(NaturalNumberSequence(), lambda i: RealNumberExact(1) / SquareRoot(i))\n",
+    "number_sequence = MappedSequence(\n",
+    "    NaturalNumberSequence(),\n",
+    "    Transform(\n",
+    "        Variable('X'),\n",
+    "        RealNumberExact(1) / SquareRoot(Variable('X'))\n",
+    "    )\n",
+    ")\n",
     "kantor_number = KantorNumber(number_sequence)\n",
     "print(kantor_number)\n",
     "for precision in [0.1, 0.001, 0.0000001, 0.000000000000001, 1e-49, 1e-200]:\n",
@@ -913,14 +972,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subtract<Multiply<Divide<Sum<KantorNumber<map<NaturalNumberSequence, func=<function <lambda> at 0x7f6f9038e040>>>, 1>, 2>, 3>, 4>\n",
+      "Subtract<Multiply<Divide<Sum<KantorNumber<map<NaturalNumberSequence, func=Transform<X -> Divide<1, SquareRoot<X>>>>>, 1>, 2>, 3>, 4>\n",
       "-2.285714285714285714285714285714285714285714237669767\n"
      ]
     }
@@ -939,14 +998,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KantorNumber<ConcatSequences<FiniteSequence<[KantorNumber<map<NaturalNumberSequence, func=<function <lambda> at 0x7f6f9038e040>>>]>, map<NaturalNumberSequence, func=<function <lambda> at 0x7f6f90457700>>>>\n",
+      "KantorNumber<ConcatSequences<FiniteSequence<[KantorNumber<map<NaturalNumberSequence, func=Transform<X -> Divide<1, SquareRoot<X>>>>>]>, map<NaturalNumberSequence, func=Transform<X -> Divide<1, SquareRoot<X>>>>>>\n",
       "precision: 0.1\tvalue=0.77\n",
       "precision: 0.001\tvalue=0.7789\n",
       "precision: 1e-07\tvalue=0.779017836\n",
@@ -959,7 +1018,7 @@
    "source": [
     "number_sequence = ConcatSequences(\n",
     "    FiniteSequence([kantor_number]),\n",
-    "    MappedSequence(NaturalNumberSequence(), lambda i: RealNumberExact(1) / SquareRoot(i)),\n",
+    "    MappedSequence(NaturalNumberSequence(), Transform(Variable('X'), RealNumberExact(1) / SquareRoot(Variable('X')))),\n",
     ")\n",
     "\n",
     "kantor_number2 = KantorNumber(number_sequence)\n",
@@ -978,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +1046,7 @@
        "-0.636160714285714285714285714285714285714285682256035"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,16 +1064,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KantorNumber<map<NaturalNumberSequence, func=<function get_ith_element at 0x7f6f9038e700>>>\n",
-      "CPU times: user 277 µs, sys: 0 ns, total: 277 µs\n",
-      "Wall time: 196 µs\n"
+      "KantorNumber<map<NaturalNumberSequence, func=<function get_ith_element at 0x7f3b3c1230d0>>>\n",
+      "CPU times: user 126 µs, sys: 1 µs, total: 127 µs\n",
+      "Wall time: 117 µs\n"
      ]
     }
    ],
@@ -1032,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1152,13 @@
     }
    ],
    "source": [
-    "number_sequence = MappedSequence(NaturalNumberSequence(), lambda i: RealNumberExact(1) / SquareRoot(i))\n",
+    "number_sequence = MappedSequence(\n",
+    "    NaturalNumberSequence(),\n",
+    "    Transform(\n",
+    "        Variable('X'),\n",
+    "        RealNumberExact(1) / SquareRoot(Variable('X'))\n",
+    "    )\n",
+    ")\n",
     "kantor_number = KantorNumber(number_sequence)\n",
     "for i in range(40, 60):\n",
     "    expected_diff = Decimal(0.125) ** (i + 1)\n",
